@@ -46,6 +46,10 @@
 #include <signal.h>
 #include <semaphore.h>
 
+#if TS_HAVE_PTHREAD_NP_H
+#include <pthread_np.h>
+#endif
+
 #define INK_MUTEX_INIT PTHREAD_MUTEX_INITIALIZER
 
 typedef pthread_t ink_thread;
@@ -317,9 +321,15 @@ ink_create_pipe( int pfd[2])
 static inline void
 ink_set_thread_name(const char* name ATS_UNUSED)
 {
-#if defined(HAVE_SYS_PRCTL_H) && defined(PR_SET_NAME)
+#if defined(HAVE_PTHREAD_SETNAME_NP_1)
+  pthread_setname_np(name);
+#elif defined(HAVE_PTHREAD_SETNAME_NP_2)
+  pthread_setname_np(pthread_self(), name);
+#elif defined(HAVE_PTHREAD_SET_NAME_NP_2)
+  pthread_set_name_np(pthread_self(), name);
+#elif defined(HAVE_SYS_PRCTL_H) && defined(PR_SET_NAME)
   prctl(PR_SET_NAME, name, 0, 0, 0);
-#endif /* no prctl.h and PR_SET_NAME not supported */
+#endif
 }
 
 #endif /* #if defined(POSIX_THREAD) */
